# zkpool-prover

./: Cargo.toml  Dockerfile  README.md  app.yml  introduction.md  run-prover.sh  rust-toolchain
.github/workflows/: build.yml  release.yml  uniform-prover.yml
doc/: introduction.md
src/: client.rs  main.rs  pool.rs  prover.rs
stratum/: Cargo.toml  README.md
stratum/src/: codec.rs  message.rs
