[package]
name = "zkpool-prover"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "zkpool-prover"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
rayon = "1.5.1"
anyhow = "1.0.53"
tracing = "0.1.30"
log = "0.4.14"
tracing-subscriber = "0.3.8"
tokio-stream = "0.1.8"
futures = "0.3.21"
futures-util = "0.3.21"
threadpool = "1.8.1"
crossbeam = "0.8.1"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
ansi_term = "0.12.1"
json-rpc-types = "1.0.3"
machine-uid = "0.4.0"
hex = "0.4.3"
lazy_static = "1.4.0"
serde_yaml = "0.9.23"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.taiko-stratum]
path = "./stratum"


[dependencies.smartcore-ml]
git = "https://github.com/aoraki-labs/risc0"
branch = "zkml-demo"
package = "smartcore-ml"


[dependencies.clap]
version = "4.0.10"
features = ["derive"]


[dependencies.tokio]
version = "1.34.0"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net"
]

[dependencies.tokio-util]
version = "0.7.0"
features = ["codec"]

[dependencies.serde_json]
version = "1.0.82"
features = ["preserve_order"]

[features]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = true
codegen-units = 1
panic = "abort"

