[package]
name = "zkpool-prover"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "zkpool-prover"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
rayon = "1.5.1"
anyhow = "1.0.53"
tracing = "0.1.30"
log = "0.4.14"
tracing-subscriber = "0.3.8"
tokio-stream = "0.1.8"
futures = "0.3.21"
futures-util = "0.3.21"
threadpool = "1.8.1"
crossbeam = "0.8.1"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
ansi_term = "0.12.1"
json-rpc-types = "1.0.3"
machine-uid = "0.5.1"
hex = "0.4.3"
lazy_static = "1.4.0"
clap = { version = "4.0.14", features = ["derive", "env"] }
serde_yaml = "0.9.23"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.zkevm-circuits]
git = "https://github.com/taikoxyz/zkevm-circuits.git"
rev = "4314b27fdddd3770f1c9e6bcd28ad83bcc6571c7"

[patch."https://github.com/taikoxyz/zkevm-circuits.git"]
zkevm-circuits = { git = "https://github.com/aoraki-labs/zkevm-circuits", rev = "b0f50e7839857d9a0fceaaab220655e6aff5b2bc" }

[dependencies.taiko-stratum]
path = "./stratum"

#[dependencies.smartcore-ml]
#git = "https://github.com/aoraki-labs/risc0"
#branch = "zkml-demo"
#package = "smartcore-ml"


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", branch = "taiko/unstable" }

[patch."https://github.com/taikoxyz/halo2wrong.git"]
halo2wrong = { git = "https://github.com/aoraki-labs/halo2wrong",rev = "07afd1119dd34693a0ad7af0e74b5b2b66d3196f"}

#taiko A6 testnet core lib
[dependencies.prover]
git = "https://github.com/aoraki-labs/taiko-prover-core"
branch = "taiko-a6-final"
package = "prover"
[dependencies.zkevm_common]
git = "https://github.com/aoraki-labs/taiko-prover-core"
branch = "taiko-a6-final"
package = "zkevm_common"

[dependencies.tokio]
version = "1.34.0"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net"
]

[dependencies.tokio-util]
version = "0.7.0"
features = ["codec"]

[dependencies.serde_json]
version = "1.0.82"
features = ["preserve_order"]

[features]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = true
codegen-units = 1
panic = "abort"

